tests/ui/using-for/imports/transitive_non_global_operator.stderr
error: operators can only be defined in a global `using for` directive
   ╭▸ ROOT/tests/ui/using-for/imports/auxiliary/non_global_left.sol:LL:CC
   │
LL │ using {addLeft as +, negLeft as -} for TransitiveInt;
   ╰╴       ━━━━━━━

error: operators can only be defined in a global `using for` directive
   ╭▸ ROOT/tests/ui/using-for/imports/auxiliary/non_global_left.sol:LL:CC
   │
LL │ using {addLeft as +, negLeft as -} for TransitiveInt;
   ╰╴                     ━━━━━━━

error: operators can only be defined in a global `using for` directive
   ╭▸ ROOT/tests/ui/using-for/imports/auxiliary/non_global_right.sol:LL:CC
   │
LL │ using {addRight as +, negRight as -} for TransitiveInt;
   ╰╴       ━━━━━━━━

error: operators can only be defined in a global `using for` directive
   ╭▸ ROOT/tests/ui/using-for/imports/auxiliary/non_global_right.sol:LL:CC
   │
LL │ using {addRight as +, negRight as -} for TransitiveInt;
   ╰╴                      ━━━━━━━━

error: cannot apply builtin operator `+` to `TransitiveInt` and `TransitiveInt`
   ╭▸ ROOT/tests/ui/using-for/imports/transitive_non_global_operator.sol:LL:CC
   │
LL │         return a + b;
   │                ┬ ━ ─ TransitiveInt
   │                │
   ╰╴               TransitiveInt

error: cannot apply unary operator `-` to `TransitiveInt`
   ╭▸ ROOT/tests/ui/using-for/imports/transitive_non_global_operator.sol:LL:CC
   │
LL │         return -a;
   ╰╴                ━

error: aborting due to 6 previous errors

